jenkins.byondlabs.io/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  template:
    spec:
      containers:
        - name: jenkins
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: jenkins-scripts
              mountPath: /usr/share/jenkins/ref
          command: ["/bin/bash", "-c"]
          args: ["/usr/local/bin/install-plugins.sh < /usr/share/jenkins/ref/plugins.txt; /sbin/tini -s -- /usr/local/bin/jenkins.sh"]
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home
        - name: jenkins-scripts
          persistentVolumeClaim:
            claimName: jenkins-scripts
