jenkins.byondlabs.io/ingresses.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - jenkins.byondlabs.io
      secretName: jenkins-tls
  rules:
    - host: jenkins.byondlabs.io
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
